--- a/31-holidays.qmd
+++ b/31-holidays.qmd
@@ -7,6 +7,15 @@ source("_common.R")
 status("polishing", "2023-03-24", section = "Holidays")  # drafting, polishing, complete
 ```
 
+<!--
+
+Jim
+
+- Look into Ramadan Adjustment in one of their series
+
+ -->
+
+
 ```{r, echo=FALSE, include = FALSE}
 library(tidyverse, quietly = TRUE)
 library(tsbox, quietly = TRUE)
