--- a/31-holidays.qmd
+++ b/31-holidays.qmd
@@ -7,6 +7,7 @@ source("_common.R")
 status("polishing", "2023-03-24", section = "Holidays")  # drafting, polishing, complete
 ```
 
+```{=html}
 <!--
 
 Jim
@@ -14,8 +15,7 @@ Jim
 - Look into Ramadan Adjustment in one of their series
 
  -->
-
-
+```
 ```{r, echo=FALSE, include = FALSE}
 library(tidyverse, quietly = TRUE)
 library(tsbox, quietly = TRUE)
@@ -33,11 +33,15 @@ library(tsbox, quietly = TRUE)
 
  -->
 ```
-## Why should we adjust for holiday effects
+Many time series are affected by public holidays.
+For example, retail sales typically increase before Christmas, and are much lower during Christmas days.
+Similar effects occur for Chinese New Year, Ramadan, Diwali or Easter.
+In seasonal adjusmtent, the treatment of Christmas is usually not much of a problem, because Christmas always occur on the same date in Decemeber.
+Thus, the Christmas effect is simply part of the December effect (or of the fourth quarter effect, if you have a quarterly series).
 
-Easter is based on the lunar cycles of the Jewish calendar.
-As such, the Easter dates change from year to year.
-Depending on the year, Easter is either in March or April.
+Things are more complicated with irregular holidays.
+Because their occurence follow different rules, the holiday happens at different months in different years.
+Easter, for example, is based on the lunar cycles of the Jewish calendar, and is sometimes in March and sometimes in April.
 In quarterly data, Easter fall either in the first or in the second quarter.
 
 For the interpretation of many time series, this constitutes problem.
@@ -46,38 +50,13 @@ If March values are compared between years, their interpretation depends on the 
 If Easter falls into March, we would expect lower retail sales in this month.
 Conversely, if it falls into April we would expect April numbers to be lower.
 
-| Variable          | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
-|---------------------------------------|---------------------------------|
-| `const`           | Trend constant regression variable to allow for a nonzero overall mean for the differenced data.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
-| `seasonal`        | Fixed seasonal effects parameterized via `s−1` seasonal contrast variables. The resulting variables allow for month-to-month (or quarter-to-quarter, etc.) differences in level, but have no net effect on overall level. Cannot be used with sincos or in models with seasonal differencing except as a partial change of regime variable.                                                                                                                                                                                                                                                                  |
-| `sincos[ ]`       | Fixed seasonal effects (for s = seasonal period) parameterized via trigonometric regression variables of the form sin(ωjt) and cos(ωjt) at seasonal frequencies ωj = (2πj/s) for 1 ≤ j ≤ s/2 (dropping sin(ωjt) ≡ 0 for j = s/2 for s even). Each frequency to be included must be specified, i.e., for monthly series sincos\[1, 2, 3, 4, 5, 6\] includes all seasonal frequencies while sincos\[1, 2, 3\] includes only the first three. Cannot be used with seasonal or in models with seasonal differencing.                                                                                             |
-| `td`              | Estimate monthly (or quarterly) flow trading-day effects by including the tdnolpyear variables in the model, and handle leap-year effects either by re-scaling (for transformed series) or by including the lpyear regression variable (for untransformed series). Can only be used for monthly or quarterly series, and cannot be used with `tdnolpyear`, `td1coef`, `td1nolpyear`, `lpyear`, `lom`, `loq`, `tdstock`, or `tdstock1coef`. If `td` is specified, do not specify `transform.adjust = "lpyear"` or `transform.adjust = "lom"`.                                                                 |
-| `tdnolpyear`      | Include the six day-of-week contrast variables (monthly and quarterly flow series only): (no. of Mondays) − (no. of Sundays), ..., (no. of Saturdays) − (no. of Sundays). Cannot be used with td, `td1coef`, `td1nolpyear`, `tdstock`, or `tdstock1coef`.                                                                                                                                                                                                                                                                                                                                                    |
-| `td1coef`         | Estimate monthly (or quarterly) flow trading-day effects by including the td1nolpyear variable (see below) in the model, and handle leap-year effects either by re-scaling (for transformed series) or by including the lpyear regression variable (for untransformed series). Can only be used for monthly or quarterly series, and cannot be used with `td`, `tdnolpyear`, `td1nolpyear`, `lpyear`, `lom`, `loq`, `tdstock`, or `tdstock1coef`.                                                                                                                                                            |
-| `td1nolpyear`     | Include the weekday-weekend contrast variable (monthly and quarterly flow series only): (no. of weekdays) −52 (no. of Saturdays and Sundays).                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-| `lpyear`          | Include a contrast variable for leap-year (monthly and quarterly flow series only): 0.75 for leap-year Februaries (first quarters), -0.25 for non-leap year Februaries (first quarters), and 0.0 otherwise.                                                                                                                                                                                                                                                                                                                                                                                                  |
-| `lom`             | Include length-of-month as a regression variable. If lom is requested for a quarterly series, X-13ARIMA-SEATS uses loq instead. Requesting lom when s is neither 12 nor 4 produces an error.                                                                                                                                                                                                                                                                                                                                                                                                                 |
-| `loq`             | Include length-of-quarter as a regression variable. If `loq` is requested for a monthly series, X-13ARIMA-SEATS uses `lom` instead.                                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
-| `tdstock[w]`      | Estimate day-of-week effects for inventories or other stocks reported for the w-th day of each month. The value w must be supplied and can range from 1 to 31. For any month of length less than the specified w, the tdstock variables are measured as of the end of the month. Use `tdstock[31]` for end-of-month stock series.                                                                                                                                                                                                                                                                            |
-| `tdstock1coef[w]` | Estimate a constrained stock trading day effect for inventories or other stocks reported for the w-th day of each month. The value w must be supplied and can range from 1 to 31. For any month of length less than the specified w, the `tdstock1coef` variables are measured as of the end of the month. Use `tdstock1coef[31]` for end-of-month stock series.                                                                                                                                                                                                                                             |
-| `easter[w]`       | Easter holiday regression variable for monthly or quarterly flow data that assumes the level of daily activity changes on the w-th day before Easter and remains at the new level through the day before Easter. This value w must be supplied and can range from 1 to 25. A user can also specify an `easter[0]` regression variable, which assumes the daily level of activity level changes only on Easter Sunday. To estimate complex effects, several of these variables, differing in their choices of `w`, can be specified.                                                                          |
-| `labor[w]`        | Labor Day holiday regression variable (monthly flow data only) that assumes the level of daily activity changes on the w-th day before Labor Day and remains at the new level until the day before Labor Day. The value `w` must be supplied and can range from 1 to 25.                                                                                                                                                                                                                                                                                                                                     |
-| `thank[w]`        | Thanksgiving holiday regression variable (monthly flow data only) that assumes the level of daily activity changes on the w-th day before or after Thanksgiving and remains at the new level until December 24. The value w must be supplied and can range from −8 to 17. Values of `w < 0` indicate a number of days after Thanksgiving; values of `w > 0` indicate a number of days before Thanksgiving.                                                                                                                                                                                                   |
-| `sceaster[w]`     | Statistics Canada Easter holiday regression variable (monthly or quarterly flow data only) assumes that the level of daily activity changes on the (w − 1)-th day before Easter and remains at the new level through Easter day. The value w must be supplied and can range from 1 to 24. To estimate complex effects, several of these variables, differing in their choices of `w`, can be specified.                                                                                                                                                                                                      |
-| `easterstock[w]`  | End of month stock Easter holiday regression variable for monthly or quarterly stock data. This regressor is generated from the easter\[w\] regressors. The value w must be supplied and can range from 1 to 25. To estimate complex effects, several of these variables, differing in their choices of `w`, can be specified.                                                                                                                                                                                                                                                                               |
-| `aodate`          | Additive (point) outlier variable, AO, for the given date or observation number. For series with associated dates, AOs are specified as aodate. For monthly series this is aoyear.month (e.g., ao1985.jul or ao1985.7), while for quarterly series this is aoyear.quarter (e.g., ao1985.1 for an AO in the first quarter of 1985), and for annual series this is aoyear (e.g., ao1922). For series without associated dates, AOs are specified as aoobservation number, e.g., ao50 for an AO at observation 50. More than one AO may be specified. All specified outlier dates must occur within the series. |
-| `aosdate-date`    | Specifies a sequence of additive (point) outlier variables, AO, for the given range of dates or observation numbers. Sequence AO outlers begin and end on a given date, e.g., aos2008.apr-2008.oct. More than one AOS may be specified, although the spans should not overlap. All specified outlier dates must occur within the series.                                                                                                                                                                                                                                                                     |
-| `lsdate`          | Regression variable for a constant level shift (in the transformed series) beginning on the given date, e.g., `"ls1990.oct"` for a level shift beginning in October 1990. More than one level shift may be specified. Dates are specified as for AOs and the same restrictions apply with one addition: level shifts cannot be specified to occur on the start date of the series (or of the span specified by the span argument of the series spec).                                                                                                                                                        |
-| `lssdate-date`    | Specifies a sequence of level shift outlier variable, LS, for the given range of dates or observation numbers. Sequence LS outlers begin and end on a given date, e.g., `"lss2008.jun-2008.nov"`. More than one LSS may be specified, though the spans should not overlap. All specified outlier dates must occur within the series.                                                                                                                                                                                                                                                                         |
-| `tcdate`          | Regression variable for a temporary level change (in the transformed series) beginning on the given date, e.g., `"tc1990.oct"` for a temporary change beginning in October 1990. More than one temporary change may be specified. Dates are specified as for AOs, and the same restrictions apply.                                                                                                                                                                                                                                                                                                           |
-| `sodate`          | Regression variable for a seasonal outlier (in the transformed series) beginning on the given date, e.g., `"so1988.mar"` for a seasonal outlier beginning in March 1988. More than one seasonal outlier change may be specified. Dates are specified as for AOs, and the same restrictions apply with one addition: seasonal level shifts cannot be specified to occur on the start date of the series (or of the span specified by the span argument of the series spec).                                                                                                                                   |
-| `rpdate-date`     | Ramp effect that begins and ends on the given dates, e.g., `"rp1988.apr-1990.oct"`. The rate of change during the ramp for this regression variable is constant. More than one ramp effect may be specified. All dates of the ramps must occur within the series. Ramps can overlap other ramps, TLs, AOs, and level shifts.                                                                                                                                                                                                                                                                                 |
-| `qddate-date`     | Quadratic ramp effect that begins and ends on the given dates, e.g., `"qd1998.may-2000.aug"`. The rate of change during the ramp for this regression variable is decreasing in magnitude. More than one quadratic ramp effect may be specified. All dates of the ramps must occur within the series. Quadratic ramps can overlap other ramps, TLs, AOs, and level shifts.                                                                                                                                                                                                                                    |
-| `qidate-date`     | Quadratic ramp effect that begins and ends on the given dates, e.g., `"qi2010.apr-2011.oct"`. The rate of change during the ramp for this regression variable is increasing in magnitude. More than one quadratic ramp effect may be specified. All dates of the ramps must occur within the series. Quadratic ramps can overlap other ramps, TLs, AOs, and level shifts.                                                                                                                                                                                                                                    |
-| `tldate-date`     | Temporary level change effect which begins and ends on the given dates, e.g., `"tl1983.jul-1984.nov"`. More than one temporary level shift effect may be specified. All dates of the temporary level shift regressor must occur within the series.                                                                                                                                                                                                                                                                                                                                                           |
-: Possible values for `regression.variables` {#tbl-regression-arguments tbl-colwidths="[20,80]"}
+| Variable    | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
+|-------------------------------|----------------------------------------|
+| `easter[w]` | Easter holiday regression variable for monthly or quarterly flow data that assumes the level of daily activity changes on the w-th day before Easter and remains at the new level through the day before Easter. This value w must be supplied and can range from 1 to 25. A user can also specify an `easter[0]` regression variable, which assumes the daily level of activity level changes only on Easter Sunday. To estimate complex effects, several of these variables, differing in their choices of `w`, can be specified. |
+| `labor[w]`  | Labor Day holiday regression variable (monthly flow data only) that assumes the level of daily activity changes on the w-th day before Labor Day and remains at the new level until the day before Labor Day. The value `w` must be supplied and can range from 1 to 25.                                                                                                                                                                                                                                                            |
+| `thank[w]`  | Thanksgiving holiday regression variable (monthly flow data only) that assumes the level of daily activity changes on the w-th day before or after Thanksgiving and remains at the new level until December 24. The value w must be supplied and can range from −8 to 17. Values of `w < 0` indicate a number of days after Thanksgiving; values of `w > 0` indicate a number of days before Thanksgiving.                                                                                                                          |
 
-
+: Values for `regression.variables` that are relvant for holiday adjustment {#tbl-regression-arguments tbl-colwidths="\[20,80\]"}
 
 ## Automated Adjustment
 
@@ -105,8 +84,7 @@ This opens the question why the one day model has been chosen in the beginning.
 
 Including holiday effects can have a dramatic effect on a final seasonal adjustment.
 Consider the monthly retail sales from Hobby, toy, and game stores.
-The data can be found at the [US Census Time Series repository](https://www.census.gov/econ/currentdata/?programCode=MARTS&startYear=1992&endYear=2023&categories[]=44X72&dataType=SM&geoLevel=US&adjusted=1&notAdjusted=1&errorData=0).
-
+The data can be found at the [US Census Time Series repository](https://www.census.gov/econ/currentdata/?programCode=MARTS&startYear=1992&endYear=2023&categories%5B%5D=44X72&dataType=SM&geoLevel=US&adjusted=1&notAdjusted=1&errorData=0).
 
 ::: callout-note
 ### How to read data from CENSUS into R
@@ -138,8 +116,6 @@ census_url <- "https://www.census.gov/econ_export/?format=csv&adjusted=true&notA
 get_census_time_series(census_url)
 ```
 :::
-
-
 
 ```{r, echo=FALSE}
 hobby_toy_game <- 
@@ -176,10 +152,12 @@ structure(c(620L, 585L, 643L, 706L, 660L, 721L, 678L, 653L, 638L,
 1190L, 1360L, 1260L, 1274L, 1196L), .Tsp = c(1992, 2015.41666666667, 
 12), class = "ts")
 ```
+
 ```{r}
 ts_plot(hobby_toy_game, title = "Hobby, Toy and Game store monthly sales")
 ```
-We can perform a seasonal adjustment on this series with and without the Easter[8] regressor.
+
+We can perform a seasonal adjustment on this series with and without the Easter\[8\] regressor.
 
 ```{r}
 m0 <- seas(hobby_toy_game, x11 = "", regression = NULL, outlier = NULL)
@@ -191,10 +169,9 @@ ts_dygraphs(
 )
 ```
 
-Notice the large differences during certain Easter periods. 
+Notice the large differences during certain Easter periods.
 For example, the final seasonally adjusted series including an Easter regressor in April 2011 was 1360.52.
-The final seasonally adjusted values without an Easter regressor was 1449.3, a difference of 89 million dollars which is over 7.5% difference from of the original series value. 
-
+The final seasonally adjusted values without an Easter regressor was 1449.3, a difference of 89 million dollars which is over 7.5% difference from of the original series value.
 
 ## Case Study: Chinese New Year
 
