--- a/references.bib
+++ b/references.bib
@@ -101,7 +101,7 @@
   address =      {Washington, DC, USA},
   year =         2017,
   edition =      {Version 1.1},
-  url =          {http://www.census.gov/ts/x13as/docX13ASHTML.pdf},
+  url =          {https://www2.census.gov/software/x-13arima-seats/x-13-data/documentation/docx13as.pdf},
 }
 
 @incollection{dagum16,
