--- a/references.bib
+++ b/references.bib
@@ -305,3 +305,11 @@
   year={1990},
   publisher={Taylor \& Francis}
 }
+
+@book{brockwell1991theroy,
+  title={Time Series: Theory and Methods},
+  author={Peter J. Brockwell and Richard A. Davis},
+  year={1991},
+  publisher={Springer-Verlag},
+  address={New York}
+}
