--- a/references.bib
+++ b/references.bib
@@ -306,7 +306,7 @@
   publisher={Taylor \& Francis}
 }
 
-@book{brockwell1991theroy,
+@book{brockwell1991theory,
   title={Time Series: Theory and Methods},
   author={Peter J. Brockwell and Richard A. Davis},
   year={1991},
