--- a/22-transform.qmd
+++ b/22-transform.qmd
@@ -23,7 +23,7 @@ status("course_complete", "2023-12-21", section = "Transform")  # drafting, poli
 In seasonal adjustment, one of the first choices is whether a series needs to be transformed before modeling.
 Two types of transformation types typically occur within X-13, *transformations* and *prior modifications*.
 Prior modifications are relatively rarely used and will be covered in the second section.
-Tranformations, especially lograitmic transformations, are ubiquitous and central to many seasonal adjustment models.
+Transformations, especially logarithmic transformations, are ubiquitous and central to many seasonal adjustment models.
 
 Below is our standard example.
 As we have seen before, the automated procedures of X-13 opt for a logarithmic transformation of the series.
